--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@tailwindcss/postcss": "^4.0.0-beta.5",
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.4.1",
-    "framer-motion": "^11.13.1",
     "next": "^15.0.3",
     "next-view-transitions": "^0.3.4",
     "postgres": "^3.4.5",
@@ -26,5 +25,9 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^4.0.0-beta.5",
     "typescript": "^5.7.2"
-  }
+  },
+    "engines": {
+      "node": ">=18.17.0"
+    }
+  
 }
