--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^15.0.3",
     "next-view-transitions": "^0.3.4",
     "postgres": "^3.4.5",
+    "qrcode-terminal": "^0.12.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sugar-high": "^0.7.5"
@@ -26,8 +27,7 @@
     "tailwindcss": "^4.0.0-beta.5",
     "typescript": "^5.7.2"
   },
-    "engines": {
-      "node": ">=18.17.0"
-    }
-  
+  "engines": {
+    "node": ">=18.17.0"
+  }
 }
