--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "delete": "rm -rf app/n"
   },
   "dependencies": {
-    "@next/mdx": "15.0.3",
+    "@next/mdx": "15.1.0",
     "@tailwindcss/postcss": "^4.0.0-beta.5",
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.4.1",
-    "next": "^15.0.3",
+    "next": "15.1.0",
     "next-view-transitions": "^0.3.4",
     "postgres": "^3.4.5",
     "qrcode-terminal": "^0.12.0",
@@ -21,13 +21,17 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2",
     "postcss": "^8.4.49",
     "tailwindcss": "^4.0.0-beta.5",
     "typescript": "^5.7.2"
   },
   "engines": {
     "node": ">=18.17.0"
+  },
+  "overrides": {
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2"
   }
 }
