--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/postcss": "^4.0.0-beta.5",
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.4.1",
+    "clsx": "^2.1.1",
     "next": "15.1.0",
     "next-view-transitions": "^0.3.4",
     "postgres": "^3.4.5",
