--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@next/mdx": "15.1.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/postcss": "^4.0.0-beta.5",
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.4.1",
