--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "tailwind.confing.js"  ],
   "exclude": [
     "node_modules",
     "app/n/ai/*.tsx"
