--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.4.1",
     "clsx": "^2.1.1",
+    "lucide": "^0.544.0",
+    "lucide-react": "^0.544.0",
     "next": "15.1.0",
     "next-view-transitions": "^0.3.4",
     "postgres": "^3.4.5",
